--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Avaken - official webs site</title>
     <link rel="icon" href="./img/favicon.png">
     <link rel="stylesheet" href="https://unpkg.com/swiper@6/swiper-bundle.min.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.min.css">
   </head>
   <body>
     <header class="page__header header">
