--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avaken - official webs site</title>
-    <link rel="icon" href="./img/favicon.png">
+    <link rel="icon" href="img/favicon.png">
     <link rel="stylesheet" href="https://unpkg.com/swiper@6/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/main.min.css">
   </head>
@@ -14,13 +14,13 @@
         <a class="logo logo--top" href="/">
           <img
             class="logo__img"
-            src="/img/logo.svg"
+            src="img/logo.svg"
             alt="Avaken logo image"
           >
 
           <img
             class="logo__txt"
-            src="/img/avaken.svg"
+            src="img/avaken.svg"
             alt="Avaken"
           >
         </a>
@@ -28,13 +28,13 @@
         <a class="logo logo--scroll" href="/">
           <img
             class="logo__img"
-            src="/img/logo-gray.svg"
+            src="img/logo-gray.svg"
             alt="Avaken logo image"
           >
 
           <img
             class="logo__txt"
-            src="/img/avaken-gray.svg"
+            src="img/avaken-gray.svg"
             alt="Avaken"
           >
         </a>
@@ -48,11 +48,11 @@
             >
               <use
                 class="menu__icon menu__icon--menu"
-                href="/img/menu-btn.svg#menu"
+                href="img/menu-btn.svg#menu"
              ></use>
               <use
                 class="menu__icon menu__icon--cross"
-                href="/img/menu-btn.svg#cross"
+                href="img/menu-btn.svg#cross"
              ></use>
             </svg>
           </button>
@@ -88,20 +88,20 @@
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
                   <picture>
-                    <source media="(min-width:960px)" srcset="/img/slider-img1.jpg">
-                    <img src="/img/slider-img1-s.jpg" alt="Get shit done">
+                    <source media="(min-width:960px)" srcset="img/slider-img1.jpg">
+                    <img src="img/slider-img1-s.jpg" alt="Get shit done">
                   </picture>
                 </div>
                 <div class="swiper-slide">
                   <picture>
-                    <source media="(min-width:960px)" srcset="/img/slider-img2.jpg">
-                    <img src="/img/slider-img2-s.jpg" alt="Get shit done">
+                    <source media="(min-width:960px)" srcset="img/slider-img2.jpg">
+                    <img src="img/slider-img2-s.jpg" alt="Get shit done">
                   </picture>
                 </div>
                 <div class="swiper-slide">
                   <picture>
-                    <source media="(min-width:960px)" srcset="/img/slider-img3.jpg">
-                    <img src="/img/slider-img3-s.jpg" alt="Get shit done">
+                    <source media="(min-width:960px)" srcset="img/slider-img3.jpg">
+                    <img src="img/slider-img3-s.jpg" alt="Get shit done">
                   </picture>
                 </div>
               </div>
@@ -180,7 +180,7 @@
         <div class="footer__content _container">
           <img
             class="footer__img"
-            src="/img/about-img.png"
+            src="img/about-img.png"
             alt="About us image"
           >
 
